--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Concur | End User Adoption</title>
+    <title>Matt Michaels: TripIt.com</title>
   </head>
   <body>
     <section id="indigo-wrapper">
-      
+
       <!--removeIf(production)-->
       <!-- Indigo Slate custom stylesheet  -->
       <link rel="stylesheet" type="text/css" href="styles.css" />
@@ -18,7 +18,8 @@
           <div class="container">
             <div class="row">
               <div class="col-12">
-                <h3>SAP Concur Nav Placeholder</h3>
+                <img src="img/logo-tripit.svg" />
+                <h3></h3>
               </div>
             </div>
           </div>
@@ -831,7 +832,7 @@
       <script src="vendor.js"></script>
       <script src="bundle.js"></script>
       <!--endRemoveIf(production)-->
-      
+
     </section>
   </body>
 </html>
